[project]
name = "audible"
version = "0.11.0"
description = "A(Sync) Interface for internal Audible API written in pure Python."
authors = [{ name = "mkb79", email = "mkb79@hackitall.de" }]
requires-python = ">=3.11,<3.15"
readme = "README.md"
license = "AGPL-3.0-only"
keywords = [
    "Audible",
    "API",
    "async",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
homepage = "https://github.com/mkb79/Audible"
repository = "https://github.com/mkb79/Audible"
documentation = "https://audible.readthedocs.io"
dependencies = [
    "Pillow (>=12.3.0)",
    "beautifulsoup4 (>=4.14.3)",
    "httpx (>=0.27.2,<0.29)",
    "pbkdf2 (>=1.3)",
    "pyaes (>=1.6.1)",
    "rsa (>=4.9.1)",
]

[project.optional-dependencies]
cryptography = [
    "cryptography (>=48.0.1)",
]
pycryptodome = [
    "pycryptodome (>=3.23.0)",
]
orjson = [
    "orjson (>=3.11.6)",
]
ujson = [
    "ujson (>=5.13.0)",
]
rapidjson = [
    "python-rapidjson (>=1.23)",
]
json-fast = [
    "orjson (>=3.11.6)",
]
json-full = [
    "orjson (>=3.11.6)",
    "ujson (>=5.13.0)",
]

[project.urls]
Changelog = "https://github.com/mkb79/Audible/releases"

[dependency-groups]
dev = [
    "nox>=2025.11.12",
    "nox-uv>=0.7.0",
]

docs = [
    "myst-parser>=4.0.1",
    "sphinx>=8.2.3",
    "sphinx-autobuild>=2025.8.25",
    "sphinx-autodoc-typehints>=3.5.2",
    "sphinx-rtd-theme>=3.0.2",
    "sphinxcontrib-httpdomain>=1.8.1",
]

mypy = [
    "mypy>=1.19.1",
    "types-beautifulsoup4>=4.12.0.20250516",
    "types-docutils>=0.22.3.20251115",
    "types-html5lib>=1.1.11.20251117",
    "types-pygments>=2.19.0.20251121",
]

pre-commit = [
    "pydoclint>=0.8.3",
    "nox>=2025.11.12",
    "pre-commit>=4.5.1",
    "pre-commit-hooks>=6.0.0",
    "ruff>=0.14.11",
]

safety = [
    "safety>=3.7.0",
]

tests = [
    "coverage[toml]>=7.13.1",
    "pytest>=9.0.2",
    "pytest-mock>=3.15.1",
]

typeguard = [
    {include-group = "tests"},
    "Pygments>=2.19.2",
    "typeguard>=4.4.4",
]

xdocs = [
    "xdoctest[colors]>=1.3.0",
]

extra-deps = [
    "cryptography>=48.0.1",
    "pycryptodome>=3.23.0",
    "orjson>=3.11.6",
    "ujson>=5.13.0",
    "python-rapidjson>=1.23",
]

[tool.hatch.build.targets.sdist]
include = ["src/audible"]

[tool.hatch.build.targets.wheel]
include = ["src/audible"]

[tool.hatch.build.targets.wheel.sources]
"src/audible" = "audible"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
required-version = ">=0.7.1"

[tool.coverage.paths]
source = ["src/audible", "*/site-packages"]
tests = ["tests", "*/tests"]

[tool.coverage.run]
branch = true
source = ["src/audible", "tests"]
relative_files = true

[tool.coverage.report]
show_missing = true
fail_under = 10  # temporarily drop complexity, target is 100
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:"
]

[tool.mypy]
python_version = "3.11"
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_decorators = false

[tool.ruff]
#  missing rst-docstrings check, these should be adding through ruff
line-length = 88
src = ["src"]
target-version = "py311"
output-format = "grouped"

[tool.ruff.lint]
ignore = [
    "D10",  # temporarily ignore missing docstrings
    "E501",
    "N818",
    "PLR0912",  # temporarily
    "PLR0913",  # temporarily
    "PLR0915",  # temporarily
    "PLR2004",  # temporarily
]
select=[
    "A",
    "ASYNC",
    "B",
    "C4",
    "C90",
    "D",
    "E",
    "F",
    "G",
    "I",
    "N",
    "PGH",
    "PL",
    "Q",
    "RUF",
    "S",
    "UP",
    "W",
]

[tool.ruff.lint.mccabe]
max-complexity = 21  # temporarily raise complexity, target is 10

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
force-single-line = false
known-first-party = ["audible"]
lines-after-imports = 2

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101", "PLC0415", "S106"]
"examples/*" = ["S101", "PLC0415"]
"src/audible/json_provider/protocols.py" = ["D417"]
"src/audible/json_provider/*_provider.py" = ["PLC0415"]
"src/audible/json_provider/registry.py" = ["PLC0415"]

[tool.pytest.ini_options]
testpaths = ["tests", "src/audible"]

[tool.pydoclint]
style = "google"
exclude = '\.git|\.nox|\.pytest_cache|__pycache__'
arg-type-hints-in-docstring = false
check-return-types = false
